5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1822_1646.log
== TEST (2019-06-13 11:03:35) 
-- CODE:
from numpy import*

n = array(eval(input('')))

j = 0
for i in n:
	if(n[i]<=50):
		j+=1
		print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:04:15) 
-- CODE:
from numpy import*

n = array(eval(input('')))

j = 0
for i in range(n):
	if(n[i]<=50):
		j+=1
		print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:04:45) 
-- CODE:
from numpy import*

n = array(eval(input('')))

j = 0
for i in range(size(n)):
	if(n[i]<=50):
		j+=1
		print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:06:03) 
-- CODE:
from numpy import*

n = array(eval(input('')))

i = 0
for i in n:
	if(i<=50):
		i+=1
		print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:06:21) 
-- CODE:
from numpy import*

n = array(eval(input('')))

i = 0
for i in n:
	if(i<=50):
		i+=1
		print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:09:12) 
-- CODE:
from numpy import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
		print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:10:11) 
-- CODE:
from numpy import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
		print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:10:35) 
-- CODE:
from numpy import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:15:40) 
-- CODE:
from numpy import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)

b = 0
c = 0
t = (b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
		t[c]=n[u]
print(t)		
-- ERROR:
File "XXXX", line 12
    t = (b, dtype=int)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:17:13) 
-- CODE:
from numpy import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)


t = (b, dtype=int)
b = 0
c = 0

for u in n:
	if(u<=50):
		b = b + 1
		t[c]=n[u]
print(t)		
-- ERROR:
File "XXXX", line 11
    t = (b, dtype=int)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:18:52) 
-- CODE:
from numpy import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)


t = (b, dtype=int)
b = 0
c = 0

for u in n:
	if(u<=50):
		b = b + 1
		t[c] = n[u]
   print(t)		
-- ERROR:
File "XXXX", line 11
    t = (b, dtype=int)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:24:48) 
-- CODE:
from numpy import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)


t = (b, dtype=int)
b = 0
c = 0

for i in n:
	if(i<=50):
		b = b + 1
		t[c] = n[b]
		
print(t)		
-- ERROR:
File "XXXX", line 11
    t = (b, dtype=int)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:24:58) 
-- CODE:
from numpy import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)


t = (b, dtype=int)
b = 0
c = 0

for i in n:
	if(i<=50):
		b = b + 1
		t[c] = n[i]
		
print(t)		
-- ERROR:
File "XXXX", line 11
    t = (b, dtype=int)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:35) 
-- CODE:
from numpy import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = (b, dtype=int)
for i in n:
	if(i<=50):
		b = b + 1
		t[c] = n[i]
		
print(t)		
-- ERROR:
File "XXXX", line 14
    t = (b, dtype=int)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:28:01) 
-- CODE:
from numpy import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = (b, dtype=int)

for i in n:
	if(i<=50):
	b = b + 1
		t[c] = n[i]
		
print(t)		
-- ERROR:
File "XXXX", line 14
    t = (b, dtype=int)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:28:03) 
-- CODE:
from numpy import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = (b, dtype=int)

for i in n:
	if(i<=50):
	b = b + 1
		t[c] = n[i]
		
print(t)		
-- ERROR:
File "XXXX", line 14
    t = (b, dtype=int)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:30:34) 
-- CODE:
from numpy import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = (b, dtype=int)

for i in n:
	if(i<=50):
	   b = b + 1
		t[c] = i
		
print(t)		
-- ERROR:
File "XXXX", line 14
    t = (b, dtype=int)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:30:35) 
-- CODE:
from numpy import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = (b, dtype=int)

for i in n:
	if(i<=50):
	   b = b + 1
		t[c] = i
		
print(t)		
-- ERROR:
File "XXXX", line 14
    t = (b, dtype=int)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:31:43) 
-- CODE:
from numpy import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = (b, dtype=int)

for i in n:
	if(i<=50):
	   b = b + 1
		t[b] = n[i]
		
print(t)		
-- ERROR:
File "XXXX", line 14
    t = (b, dtype=int)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:32:15) 
-- CODE:
from numpy import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for i in n:
	if(i<=50):
	   b = b + 1
		t[b] = n[i]
		
print(t)		
-- ERROR:
File "XXXX", line 19
    t[b] = n[i]
              ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:32:26) 
-- CODE:
from numpy import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for i in n:
	if(i<=50):
	   b = b + 1
		t[c] = n[i]
		
print(t)		
-- ERROR:
File "XXXX", line 19
    t[c] = n[i]
              ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:32:43) 
-- CODE:
from numpy import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
	   b = b + 1
		t[c] = n[i]
		
print(t)		
-- ERROR:
File "XXXX", line 19
    t[c] = n[i]
              ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:32:56) 
-- CODE:
from numpy import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
	   b = b + 1
		t[c]=n[i]
		
print(t)		
-- ERROR:
File "XXXX", line 19
    t[c]=n[i]
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:33:18) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
	   b = b + 1
		t[c]=n[i]
		
print(t)		
-- ERROR:
File "XXXX", line 20
    t[c]=n[i]
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:34:00) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
	   b = b + 1
		t[c] = n[u]
		
print(t)		
-- ERROR:
File "XXXX", line 20
    t[c] = n[u]
              ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:35:06) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
	   b = b + 1
		c = c + 1
		t[c] = n[u]
		
print(t)		
-- ERROR:
File "XXXX", line 20
    c = c + 1
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:35:27) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
	   b = b + 1
		c = c + 1
		t[u] = n[c]
		
print(t)		
-- ERROR:
File "XXXX", line 20
    c = c + 1
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:37:52) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
		t[c] = n[u]
c = c + 1		
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:38:55) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
t[c] = n[u]
c = c + 1		
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:28) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
t[c] = n[u]
c = c + 1		
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:48) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
      t[c] = n[u]
c = c + 1		
print(t)		
-- ERROR:
File "XXXX", line 20
    t[c] = n[u]
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:48) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
      t[c] = n[u]
c = c + 1		
print(t)		
-- ERROR:
File "XXXX", line 20
    t[c] = n[u]
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:48) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
      t[c] = n[u]
c = c + 1		
print(t)		
-- ERROR:
File "XXXX", line 20
    t[c] = n[u]
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:48) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
      t[c] = n[u]
c = c + 1		
print(t)		
-- ERROR:
File "XXXX", line 20
    t[c] = n[u]
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:48) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
      t[c] = n[u]
c = c + 1		
print(t)		
-- ERROR:
File "XXXX", line 20
    t[c] = n[u]
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:48) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
      t[c] = n[u]
c = c + 1		
print(t)		
-- ERROR:
File "XXXX", line 20
    t[c] = n[u]
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:49) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
      t[c] = n[u]
c = c + 1		
print(t)		
-- ERROR:
File "XXXX", line 20
    t[c] = n[u]
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:49) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
      t[c] = n[u]
c = c + 1		
print(t)		
-- ERROR:
File "XXXX", line 20
    t[c] = n[u]
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:39:49) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
      t[c] = n[u]
c = c + 1		
print(t)		
-- ERROR:
File "XXXX", line 20
    t[c] = n[u]
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:40:13) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
      t[c] = n[c]
c = c + 1		
print(t)		
-- ERROR:
File "XXXX", line 20
    t[c] = n[c]
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:40:25) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
		t[c] = n[c]
c = c + 1		
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:40:52) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
t[c] = n[c]
c = c + 1		
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:41:21) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
      t[u] = n[c]
c = c + 1		
print(t)		
-- ERROR:
File "XXXX", line 20
    t[u] = n[c]
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:41:33) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
		t[u] = n[c]
c = c + 1		
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:41:57) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
		t[u] = n[c]
      c = c + 1		
print(t)		
-- ERROR:
File "XXXX", line 21
    c = c + 1		
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:42:21) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
		t[u] = n[c]
		c = c + 1		
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:42:21) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
		t[u] = n[c]
		c = c + 1		
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:42:21) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
		t[u] = n[c]
		c = c + 1		
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:42:21) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
		t[u] = n[c]
		c = c + 1		
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:42:21) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
		t[u] = n[c]
		c = c + 1		
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:42:52) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)



b = 0
c = 0
t = zeros(b, dtype=int)

for u in n:
	if(u<=50):
		b = b + 1
		t[u] = n[c]
		c = c + 1		
print(t[u])		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:44:49) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)


t = zeros(b, dtype=int)
x = 0
g=0
for u in n:
	if(u<=50):
		b = b + 1
		t[x] = n[g]
		x+=1
	g+=1
print(t[u])		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:46:23) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)


t = zeros(j, dtype=int)
x = 0
g = 0
for u in n:
	if(u<=50):
		t[x] = n[g]
		x+=1
	g+=1
print(t[u])		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:46:45) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)


t = zeros(j, dtype=int)
x = 0
g = 0
for u in n:
	if(u<=50):
		t[x] = n[g]
		x+=1
	g+=1
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:47:04) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)


t = zeros(j, dtype=int)
x = 0
g = 0
for u in n:
	if(u<=50):
		t[x] = n[g]
		x+=1
	g+=1
print(t)		
-- EXECUTION TIME:
0.792846
-- TEST CASE 1:
---- input:
[50,250,120,1350,265,42]
---- correct output:
2
[0 5]
---- user output:
2
[50 42]
-- TEST CASE 2:
---- input:
[200,100,151,320,115]

---- correct output:
0
[]
---- user output:
0
[]
-- TEST CASE 3:
---- input:
[50,51,52,53,55,191]
---- correct output:
1
[0]
---- user output:
1
[50]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:47:14) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)


t = zeros(j, dtype=int)
x = 0
g = 0
for u in n:
	if(u<=50):
		t[x] = n[g]
		x+=1
	g+=1
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:47:48) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)


t = zeros(j, dtype=int)
x = 0
g = 0
for u in range(size(n)):
	if(u<=50):
		t[x] = n[g]
		x+=1
	g+=1
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:48:09) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)


t = zeros(j, dtype=int)
x = 0
g = 0
for u in range(n):
	if(u<=50):
		t[x] = n[g]
		x+=1
	g+=1
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:48:32) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)


t = zeros(j, dtype=int)
x = 0
g = 0
for u in range(size(n)):
	if(u<=50):
		t[x] = n[g]
		x+=1
	g+=1
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:48:59) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)


t = zeros(j, dtype=int)
x = 0
g = 0
for u in range(size(n)):
	if(u<=50):
		t[x] = n[g]
		x+=1
	g+=1
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:49:58) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)


t = zeros(j, dtype=int)
x = 0
g = 0
for u in range(size(n)):
	if(u<=50):
		t[x] = n[g]
		x+=1
	g+=1
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:50:44) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)


t = zeros(j, dtype=int)
x = 0
g = 0
for u in range(size(n)):
	if(u<=50):
		t[x] = n[g]
		x+=1
	g+=1
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:52:21) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)


t = zeros(j, dtype=int)
x = 0
g = 0
for u in range(size(n))
	if(u<=50):
		t[x] = n[g]
		x+=1
	g+=1
print(t)		
-- ERROR:
File "XXXX", line 15
    for u in range(size(n))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:52:26) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)


t = zeros(j, dtype=int)
x = 0
g = 0
for u in range(size(n)):
	if(u<=50):
		t[x] = n[g]
		x+=1
	g+=1
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:52:40) 
-- CODE:
from numpy import*
from math import*

n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)


t = zeros(j, dtype=int)
x = 0
g = 0
for u in range(size(n)):
	if(u<=50):
		t[x]=n[g]
		x+=1
	g+=1
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:53:16) 
-- CODE:
from numpy import*


n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)


t = zeros(j, dtype=int)
x = 0
g = 0
for u in range(size(n)):
	if(u<=50):
		t[x]=n[g]
		x+=1
	g+=1
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:53:41) 
-- CODE:
from numpy import*


n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)


t = zeros(j, dtype=int)
x = 0
g = 0
for u in range(size(n)):
	if(u<=50):
		t[x]=n
		x+=1
	g+=1
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:54:04) 
-- CODE:
from numpy import*


n = array(eval(input('')))
j = 0
for i in n:
	if(i<=50):
		j = j + 1
print(j)


t = zeros(j, dtype=int)
x = 0
g = 0
for u in range(size(n)):
	if(u<=50):
		t[x]=n[g]
		x+=1
	g+=1
print(t)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
